Updated Contact Again

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/anson-yu-86641957" class="icon fa-linkedin"><span class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/yubro" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/anson-yu-86641957" class="icon fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/yubro" class="icon fa-github" target="_blank"><span class="label">Github</span></a></li>
 						<li><a href="#four" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
