Updated First Initial Viewing?

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<span class="image avatar"><img src="images/profilePic.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Anson Yu</a></h1>
 					<p>Graduate Student, Coder,<br />
-						Reluctant Artist.....</p>
+						Soon to be Master</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -54,7 +54,9 @@
 										<p>Graduate Student at the University of Hawaii at Manoa<br />
 										   Research Assistant at <a href="http://lava.manoa.hawaii.edu">LAVA</a>.</p>
 									</header>
-									<p>Currently Pursuing an M.S. in Information & Computer Sciences</p>
+									<p>Currently pursuing an M.S. in Information & Computer Sciences, my passion is in both security and Data Visualization.
+										With the tools I have obtain through the course of my graduate career,  I pursue to help further security visualizations.
+									</p>
 								</div>
 							</section>
 
@@ -62,14 +64,11 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>See the Full Resume <a href="Resume.pdf" target="_blank">Here</a>.</p>
 									<ul class="feature-icons">
 										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-book">Visualize all the data</li>
+										<li class="fa-bolt">IT Support</li>
 									</ul>
 								</div>
 							</section>
@@ -78,27 +77,27 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Some Projects I have been involved in</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="WebOfTrustModel.html" class="image"><img src="images/SKS_Viz.png" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Visualize Open SKS-KeyServer</h4>
+												<p>Visualize connections of a PGP Keyserver, querying key servers and evaluating connections between the keys within.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="images/Garden.png" class="image"><img src="images/Garden.png" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>HAVEN</h4>
+												<p>Visualization of Random Data.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://www.youtube.com/watch?v=BooyBBXZWdI&feature=youtu.be" class="image"><img src="images/EscapeTheRoom.png" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>VR Escape the Room Game</h4>
+												<p>Group project for a VR/AR Course at the University of Hawaii at Manoa</p>
 											</div>
 										</article>
 									</div>
