Updated Escape Room Section

--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://www.youtube.com/watch?v=BooyBBXZWdI&feature=youtu.be" class="image"><img src="images/EscapeTheRoom.png" alt="" /></a>
+											<a href="https://github.com/yubro/EscapeRooms" class="image"><img src="images/EscapeTheRoom.png" alt="" /></a>
 											<div class="inner">
 												<h4>VR Escape the Room Game</h4>
-												<p>Group project for a VR/AR Course at the University of Hawaii at Manoa</p>
+												<p>Group project for a VR/AR Course at the University of Hawaii at Manoa. </br>
+												<a href="https://www.youtube.com/watch?v=BooyBBXZWdI&feature=youtu.be">See Video Here.</a></p>
 											</div>
 										</article>
 									</div>
