Minor Wording Updates

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<p>Graduate Student at the University of Hawaii at Manoa<br />
 										   Research Assistant at <a href="http://lava.manoa.hawaii.edu">LAVA</a>.</p>
 									</header>
-									<p>Currently pursuing an M.S. in Information & Computer Sciences, my passion is in both security and Data Visualization.
+									<p>Currently pursuing an M.S. in Information & Computer Sciences, my passion is in both security and data visualization.
 										With the tools I have obtain through the course of my graduate career,  I pursue to help further security visualizations.
 									</p>
 								</div>
@@ -90,7 +90,7 @@
 											<a href="images/Garden.png" class="image"><img src="images/Garden.png" alt="" /></a>
 											<div class="inner">
 												<h4>HAVEN</h4>
-												<p>Visualization of Random Data.</p>
+												<p>Visualization of energy data.</p>
 											</div>
 										</article>
 										<article>
