--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="images/Garden.png" class="image"><img src="images/Garden.png" alt="" /></a>
+											<a href="Prototype%20Flower%20Charter/example.html" class="image"><img src="images/Garden.png" alt="" /></a>
 											<div class="inner">
 												<h4>HAVEN</h4>
 												<p>Visualization of energy data.</p>
